# specificity_index

./: .gitignore  ABOUT_THIS_REPOSITORY.md  LICENSE  LICENSE.md  README.md  pyproject.toml
examples/: demo.py
results/: anchoring_credit_full40.csv  specificity_index_full40.csv  specificity_index_full40_ci.csv  validation_summary.json
scripts/: run_bootstrap_full40.py  validate_si_full40.py
specificity_index/: __init__.py  bootstrap.py  index.py  network.py  scope.py
tests/: conftest.py  test_bootstrap.py  test_index.py  test_network.py
